[gd_scene load_steps=14 format=1]

[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Sprites/background.png" type="Texture" id=2]
[ext_resource path="res://Sprites/bubble.png" type="Texture" id=3]
[ext_resource path="res://Fonts/PWBubbles_96.fnt" type="BitmapFont" id=4]
[ext_resource path="res://Objects/GroundSection.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/UI/button_play.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UI/button_play_pressed.png" type="Texture" id=7]
[ext_resource path="res://Sprites/UI/button_help.png" type="Texture" id=8]
[ext_resource path="res://Sprites/UI/button_help_pressed.png" type="Texture" id=9]
[ext_resource path="res://Sprites/UI/button_exit.png" type="Texture" id=10]
[ext_resource path="res://Sprites/UI/button_exit_pressed.png" type="Texture" id=11]

[sub_resource type="ColorRamp" id=1]

offsets = FloatArray( 0, 1 )
colors = ColorArray( 1, 1, 1, 0.752941, 1, 1, 1, 0 )

[sub_resource type="Animation" id=2]

resource/name = "Move"
length = 4.9
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 2.5 ),
"transitions": FloatArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 496, 576 ), Vector2( 528, 576 ) ]
}

[node name="TitleScreen" type="Node"]

script/script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = true

[node name="Tween" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Background" type="Sprite" parent="."]

transform/scale = Vector2( 16, 1 )
texture = ExtResource( 2 )
centered = false

[node name="Bubbles" type="Particles2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 496, 576 )
config/amount = 5
config/lifetime = 6.0
config/process_mode = 1
config/half_extents = Vector2( 512, 0 )
config/texture = ExtResource( 3 )
params/direction = 180.0
params/spread = 20.0
params/linear_velocity = 100.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color_ramp = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Bubbles"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Move = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="FishContainer" type="Node" parent="."]

[node name="Title" type="Label" parent="."]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 64.0
margin/top = 256.0
margin/right = 960.0
margin/bottom = 384.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0.25098, 0.25098, 0.25098, 1 )
custom_constants/shadow_as_outline = 2
text = "Schooled"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="GroundSection" parent="." instance=ExtResource( 5 )]

transform/pos = Vector2( 1056, 608 )

[node name="Buttons" type="Container" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="ButtonPlay" type="TextureButton" parent="Buttons"]

hint/tooltip = "Play"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 416.0
margin/top = 320.0
margin/right = 480.0
margin/bottom = 384.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="ButtonHelp" type="TextureButton" parent="Buttons"]

hint/tooltip = "Instructions"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 544.0
margin/top = 320.0
margin/right = 608.0
margin/bottom = 384.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
textures/pressed = ExtResource( 9 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="ButtonExit" type="TextureButton" parent="Buttons"]

hint/tooltip = "Exit"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 928.0
margin/top = 480.0
margin/right = 992.0
margin/bottom = 544.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 10 )
textures/pressed = ExtResource( 11 )
params/resize_mode = 0
params/stretch_mode = 0

[connection signal="timeout" from="Timer" to="." method="_on_start_timer_timeout"]

[connection signal="tween_complete" from="Tween" to="." method="_on_title_tween_complete"]

[connection signal="pressed" from="Buttons/ButtonPlay" to="." method="_on_button_play_pressed"]

[connection signal="pressed" from="Buttons/ButtonExit" to="." method="_on_button_exit_pressed"]


